Add assignment5 package